<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>tk.freaxsoftware.ribbon2.io</groupId>
        <artifactId>importers</artifactId>
        <version>1.0</version>
    </parent>
    <artifactId>importer-rss</artifactId>
    <packaging>jar</packaging>
    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
    </properties>
    <name>Ribbon2 IO Importer RSS</name>
    <description>RSS feed importer</description>
    <developers>
        <developer>
            <id>spoilt</id>
            <name>Stanislav Nepochatov</name>
            <organization>Freax Software</organization>
            <organizationUrl>freaksoftware.tk</organizationUrl>
            <email>spoilt.exile@gmail.com</email>
        </developer>
    </developers>
    
    <dependencies>
        <dependency>
            <groupId>tk.freaxsoftware.ribbon2.io</groupId>
            <artifactId>core</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>			
            <groupId>rome</groupId>			
            <artifactId>rome</artifactId>			
            <version>1.0</version>
        </dependency>
        
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>